--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="image-section">
-      <img src="/home/ash/Downloads/sasha.jpg" alt="Your Image">
+      <img src="https://github.com/Ashking-tech/my-personal-site/blob/main/sasha.jpg?raw=true" alt="Your Image">
       
     </div>
     <div class="text-section">
